# 3-python-package-jeff-bezos

./: README.md  pyproject.toml
.github/workflows/: build.yml
src/code_procrastinator/: __main__.py  procrastinator.py
tests/: test_procrastinator.py
